# Spy_Cat_Agency

./: .env.example  .gitignore  Makefile  pyproject.toml
deployment/development/: Dockerfile  docker-compose-dev.yaml
django_app/cats/: fillters.py  models.py  serializers.py  urls.py  views.py
django_app/cats/migrations/: 0001_initial.py  0002_rename_bread_cat_breed.py  0003_alter_cat_created_at.py
django_app/cats/tests/: test_cat_view.py
django_app/core/: settings.py  urls.py
django_app/mission/: admin.py  models.py  serializers.py  urls.py  views.py
django_app/mission/migrations/: 0001_initial.py  0002_alter_mission_cat.py  0003_alter_mission_created_at.py
django_app/mission/tests/: test_mission_api.py
